manifests/cluster/_template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: CHANGEME
  namespace: CHANGEME
spec:
  selector:
    app: CHANGEME
  ports:
    - name: http
      protocol: TCP
      port: CHANGEME
      targetPort: CHANGEME
